Update titles and labels in index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <div class="sidebar">
         <div class="header-section">
-            <h1>Geospatial System</h1>
-            <p class="subtitle">Analisis Batas Wilayah & Lokasi</p>
+            <h1>Geospatial System - 1217</h1>
+            <p class="subtitle">Wilkerstat 2025</p>
         </div>
         
         <div class="control-group">
@@ -44,6 +44,13 @@
                     <option value="">Semua SLS</option>
                 </select>
             </div>
+
+            <div class="input-wrapper">
+                <label>Sub SLS</label>
+                <select id="filter-subsls" disabled>
+                    <option value="">-</option>
+                </select>
+            </div>
             
             <button id="btn-reset" class="btn-secondary">Reset Filter</button>
         </div>
@@ -53,11 +60,11 @@
             <div class="input-row">
                 <div class="input-wrapper">
                     <input type="number" id="input-lat" placeholder="-2.56..." step="any">
-                    <span class="floating-label">Latitude</span>
+                    <span class="floating-label">Lintang/Latitude</span>
                 </div>
                 <div class="input-wrapper">
                     <input type="number" id="input-lng" placeholder="98.75..." step="any">
-                    <span class="floating-label">Longitude</span>
+                    <span class="floating-label">Bujur/Longitude</span>
                 </div>
             </div>
             <button id="btn-search" class="btn-primary">Cari Lokasi</button>
@@ -69,7 +76,7 @@
 
         <div class="footer">
             Powered by <b>IT Support and Innovation</b><br>
-            BPS Statistics Samosir Regency ©
+            BPS Statistics Samosir Regency ©2026
         </div>
     </div>
 
