--- a/index.html
+++ b/index.html
@@ -2,23 +2,31 @@
 <html lang="id" data-theme="light">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Geospatial System</title>
     
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <button id="mobile-menu-btn" class="floating-btn" title="Menu">
+        ☰
+    </button>
 
     <button id="theme-toggle" class="floating-btn" title="Ganti Tema">
         🌙
     </button>
 
-    <div class="sidebar">
+    <div id="sidebar-overlay"></div>
+
+    <div class="sidebar" id="sidebar">
+        <button class="close-sidebar-btn" id="close-sidebar">✕</button>
+
         <div class="header-section">
             <h1>Geospatial System - 1217</h1>
-            <p class="subtitle">Wilkerstat 2025</p>
+            <p class="subtitle">based on Wilkerstat 2025</p>
         </div>
         
         <div class="control-group">
@@ -60,11 +68,9 @@
             <div class="input-row">
                 <div class="input-wrapper">
                     <input type="number" id="input-lat" placeholder="-2.56..." step="any">
-                    <span class="floating-label">Lintang/Latitude</span>
                 </div>
                 <div class="input-wrapper">
                     <input type="number" id="input-lng" placeholder="98.75..." step="any">
-                    <span class="floating-label">Bujur/Longitude</span>
                 </div>
             </div>
             <button id="btn-search" class="btn-primary">Cari Lokasi</button>
@@ -76,7 +82,7 @@
 
         <div class="footer">
             Powered by <b>IT Support and Innovation</b><br>
-            BPS Statistics Samosir Regency ©2026
+            BPS Statistics Samosir Regency ©
         </div>
     </div>
 
